--- a/src/App.css
+++ b/src/App.css
@@ -27,39 +27,39 @@
   padding: 5px;
   border-color: #000 !important;
    font-size: 15px;
+   border-radius: 0%;
 }
 
 .luckySection{
-  border-style: outset;
-  margin-top: 5px;
+  border: 3px solid !important;
+   margin-top: 5px;
   padding: 5px;
   border-color: #000 !important;
    font-size: 30px;
+  
 }
 
 .subSection1{
-  border-right: 2px solid #000;
-  border-left: 2px solid #000;
-  border-radius: 2%;
+  border-right: 2px solid #000; 
+  border-radius: 0%;
   font-size: 20px;
 }
 
-.subSection2{
-  border-right: 2px solid #000;
+.subSection2{ 
   border-left: 2px solid #000;
-  border-radius: 2%;
+  border-radius: 0%;
   font-size: 20px;
 }
 
 .liveResultSubSection{ 
-  border-bottom: 1px solid #000;
+  border-bottom: 3px solid #000;
   border-radius: 0%;
   font-size: 20px;
 }
 
 .liveResultSection{
-  border-style: outset;
-  margin-top: 5px;
+  border: 3px solid !important;
+    margin-top: 5px;
   padding: 5px;
   border-color: #000 !important;
    font-size: 30px;
