--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,6 +1,6 @@
  
   
-  #leaderboard {
+  .leaderboard {
     text-align: center;
     border-collapse: collapse;
     border: 3px solid #e0e0e0;
@@ -11,17 +11,14 @@
                  -5px -5px 10px #ffffff !important;
   }
   
-  #leaderboard td, #leaderboard th {
+  .leaderboard td, .leaderboard th {
     padding: 6px;
     border-radius: 20px;
-  
+    font-weight: bold;
   }
 
   @media screen and (max-width: 40em){
-    #leaderboard {
-        width: 80%;
-        margin-left: 10%;
-    }
+     
 
     .responsiveTable tbody tr {
         border: 3px solid #e0e0e0;
@@ -29,14 +26,14 @@
     }
 }
   
-  #leaderboard tr:hover {background-color: #e0e0e0 }
+  .leaderboard tr:hover {background-color: #5fd865 }
   
-  #leaderboard th {
+  .leaderboard th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
     background-color: #e0e0e0;
-    color: #4D4D4D !important;
+    color: #030303 !important;
     font-size: 18px;
     font-weight: bold;
     border-radius: 20px;
