--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
   font-weight: 400 !important;
   background-color: #f8f8f8; 
   font-family: "Montserrat", sans-serif;
-  -webkit-user-select: none;  
+  /* -webkit-user-select: none;  
   -moz-user-select: none;    
   -ms-user-select: none;      
-  user-select: none;
+  user-select: none; */
 }
 
  
