--- a/src/components/table.css
+++ b/src/components/table.css
@@ -11,12 +11,27 @@
                  -5px -5px 10px #ffffff !important;
   }
   
-  .leaderboard td, .leaderboard th {
+  .leaderboard td{
     padding: 6px;
-    border-radius: 20px;
+    border-radius: 0px;
     font-weight: bold;
-  }
+    border: 1px solid #b6b6b6;
+   }
+    
+  .leaderboard thead th{ 
+    background: #2b2b2b !important;
+    color: #ffffff !important;
+   }
 
+   .leaderboard thead th{ 
+    background: #2b2b2b !important;
+    color: #ffffff !important;
+   }
+
+   tr:nth-child(even) {
+    background-color: #b8b8b8;
+  }
+  
   @media screen and (max-width: 40em){
      
 
@@ -26,7 +41,10 @@
     }
 }
   
-  .leaderboard tr:hover {background-color: #5fd865 }
+  .leaderboard tr:hover {
+    background-color: #5fd865; 
+     border-radius: 0% !important;
+    }
   
   .leaderboard th {
     padding-top: 12px;
@@ -36,7 +54,7 @@
     color: #030303 !important;
     font-size: 18px;
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: 0% !important;
 
   }
   
