--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,16 +1,33 @@
  
   
-  .leaderboard {
-    text-align: center;
+  .leaderboard { 
+    text-align: center !important;
     border-collapse: collapse;
     border: 3px solid #e0e0e0;
     border-color: transparent !important;
-    width: 50%;
+    width: 75%  !important;
     background: #e0e0e0 !important;
     box-shadow:  5px 5px 10px #bebebe,
                  -5px -5px 10px #ffffff !important;
   }
-  
+
+  .leaderboard1{
+    text-align: center !important;
+    border-collapse: collapse;
+    border: 3px solid #e0e0e0;
+    border-color: transparent !important;
+    width: 90%  !important;
+    background: #e0e0e0 !important;
+    box-shadow:  5px 5px 10px #bebebe,
+                 -5px -5px 10px #ffffff !important;
+  }
+
+
+  .setCenter {text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;}
+
   .leaderboard td{
     padding: 6px;
     border-radius: 0px;
@@ -18,7 +35,20 @@
     border: 1px solid #b6b6b6;
    }
     
+   
+
   .leaderboard thead th{ 
+    background: #2b2b2b !important;
+    color: #ffffff !important;
+   }
+
+       
+  .leaderboard1 thead th{ 
+    background: #2b2b2b !important;
+    color: #ffffff !important;
+   }
+
+   .leaderboard1 thead th{ 
     background: #2b2b2b !important;
     color: #ffffff !important;
    }
@@ -33,7 +63,13 @@
   }
   
   @media screen and (max-width: 40em){
-     
+    .leaderboard { 
+      width: 100%  !important;
+    }
+   .leaderboard1 { 
+      width: 100%  !important;
+    }
+
 
     .responsiveTable tbody tr {
         border: 3px solid #e0e0e0;
@@ -46,7 +82,23 @@
      border-radius: 0% !important;
     }
   
+    .leaderboard1 tr:hover {
+      background-color: #5fd865; 
+       border-radius: 0% !important;
+      }
+    
   .leaderboard th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #e0e0e0;
+    color: #030303 !important;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 0% !important;
+
+  }
+  .leaderboard1 th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
