--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 .App {
   text-align: center;
   font-weight: 400 !important;
-  background-color: #f8f8f8; 
+  background-color: #242424; 
   font-family: "Montserrat", sans-serif;
   /* -webkit-user-select: none;  
   -moz-user-select: none;    
@@ -20,7 +20,7 @@
   user-select: none; */
 }
 
- 
+
 
 .headSection{
   border-style: outset;
@@ -98,6 +98,33 @@
   border-radius: 2% !important;
 }
 
+
+.editBtn{
+  background-color: #d63232;
+  font-weight:500;
+  border: none;
+  color: white;
+  float: left;
+  padding: 10px 15px;
+    font-size: 12px;
+  margin: 10px 2px;
+  cursor: pointer;
+  border-radius: 2% !important;
+}
+
+.saveBtn{
+  background-color: #444444;
+  font-weight:500;
+  border: none;
+  color: white;
+  float: left;
+  padding: 10px 15px;
+    font-size: 12px;
+  margin: 10px 2px;
+  cursor: pointer;
+  border-radius: 2% !important;
+}
+
 .center{
   top: 50%;
   left: 50%;
@@ -143,13 +170,37 @@
    margin-left: 5%;
  }
 
+ .inputMar{
+   margin-right: 5%;
+   margin-left: 20%;
+   width: 30%;
+ }
+ .inputMar1{
+  margin-right: 5%;
+  width: 30%;
+}
+ .inputCs{
+   margin-top: 10px;
+ }
+
  @media only screen and (min-width: 600px) {
  .hidemd{
   display: none !important;
 }
+
  }
 @media only screen and (max-width: 600px) {
-  
+  .inputMar{
+    margin-right: 0%;
+    margin-left: 0%;
+    width: 100%; 
+  }
+
+  .inputMar1{
+    margin-right: 0%;
+    width: 100%;
+  }
+
   .colLeft{
     margin-left: 0%;
   }
