--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,14 +1,14 @@
 .App-header{
-  background: #8ee4af;
+  background: #2d3033;
   color: #edf5e1;
   font-weight: 500;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 } 
 .card{
-  background: #5cdb95;
+  background: #222629 ;
 }
 .welcomeSection{
-  background: #05386b;
+  background: #86c232;
 }
 .headSection{
   color: #edf5e1;
@@ -20,25 +20,27 @@
   margin-top: 40px;
 }
   .leaderboard { 
+    color: #edf5e1;
     text-align: center !important;
     border-collapse: collapse;
-    border: 3px solid #e0e0e0;
+    border: 3px solid #86c232;
     border-color: transparent !important;
     width: 75%  !important;
-    background: #e0e0e0 !important;
-    box-shadow:  5px 5px 10px #bebebe,
-                 -5px -5px 10px #ffffff !important;
+    background: #6b6e70 !important;
+    box-shadow:  5px 5px 10px #474b4f,
+                 -5px -5px 10px #474b4f !important;
   }
 
   .leaderboard1{
+    color: #edf5e1;
     text-align: center !important;
     border-collapse: collapse;
-    border: 3px solid #e0e0e0;
+    border: 3px solid #86c232;
     border-color: transparent !important;
     width: 90%  !important;
-    background: #e0e0e0 !important;
-    box-shadow:  5px 5px 10px #bebebe,
-                 -5px -5px 10px #ffffff !important;
+    background: #6b6e70 !important;
+    box-shadow:  5px 5px 10px #474b4f,
+                 -5px -5px 10px #474b4f !important;
   }
 
 
@@ -51,34 +53,34 @@
     padding: 6px;
     border-radius: 0px;
     font-weight: bold;
-    border: 1px solid #b6b6b6;
+    /* border: 1px solid #86c232; */
    }
     
    
 
   .leaderboard thead th{ 
-    background: #2b2b2b !important;
+    background: #222629 !important;
     color: #ffffff !important;
    }
 
        
   .leaderboard1 thead th{ 
-    background: #2b2b2b !important;
+    background: #222629 !important;
     color: #ffffff !important;
    }
 
    .leaderboard1 thead th{ 
-    background: #2b2b2b !important;
+    background: #222629 !important;
     color: #ffffff !important;
    }
 
    .leaderboard thead th{ 
-    background: #2b2b2b !important;
+    background: #222629 !important;
     color: #ffffff !important;
    }
 
    tr:nth-child(even) {
-    background-color: #b8b8b8;
+    background-color: #474b4f;
   }
   
   @media screen and (max-width: 40em){
@@ -91,18 +93,18 @@
 
 
     .responsiveTable tbody tr {
-        border: 3px solid #e0e0e0;
+        border: 3px solid #6b6e70;
         padding: .25em;
     }
 }
   
   .leaderboard tr:hover {
-    background-color: #5fd865; 
+    background-color: #86c232 !important; 
      border-radius: 0% !important;
     }
   
     .leaderboard1 tr:hover {
-      background-color: #5fd865; 
+      background-color: #86c232 !important; 
        border-radius: 0% !important;
       }
     
@@ -110,8 +112,8 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: #e0e0e0;
-    color: #030303 !important;
+    background-color: #6b6e70;
+    color: #edf5e1 !important;
     font-size: 18px;
     font-weight: bold;
     border-radius: 0% !important;
@@ -121,8 +123,8 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: #e0e0e0;
-    color: #030303 !important;
+    background-color: #6b6e70;
+    color: #edf5e1 !important;
     font-size: 18px;
     font-weight: bold;
     border-radius: 0% !important;
