--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,23 @@
    font-size: 30px;
 }
 
+.loginSection{
+  border: 2px solid !important;
+    margin-top: 10%;
+  padding: 5px;
+  border-color: #61892f !important;
+   font-size: 30px;
+    margin-bottom:  10%;
+    width: 30%;
+    margin-left: 35%;
+    margin-right: 40%;
+       /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;   */
+}
+ 
+
 .refreshBtn{
   background-color: #86c232;
   font-weight:500;
@@ -217,6 +234,12 @@ a:hover{
 
  }
 @media only screen and (max-width: 600px) {
+  .loginSection{
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 0%;
+    margin-top: 50%
+  }
   .inputMar{
     margin-right: 0%;
     margin-left: 0%;
